added google adsense

--- a/versevision/public/index.html
+++ b/versevision/public/index.html
@@ -11,6 +11,9 @@
 
       gtag('config', 'G-CL0Y6XX6HF');
     </script>
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2838951171732865"
+     crossorigin="anonymous"></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
