--- a/versevision/public/index.html
+++ b/versevision/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Verse Vision</title>
+    <title>VerseVision – Your AI Bible Companion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
